--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "wp": "wp-env",
     "wp:start": "wp-env start",
     "wp:stop": "wp-env stop",
-		"phpmyadmin:start": "docker stop wp-env-phpmyadmin 2>/dev/null; docker run --name wp-env-phpmyadmin --rm -d -p 8080:80 -e PMA_HOST=host.docker.internal -e PMA_PORT=$(docker port $(docker ps -q -f name=\"$(echo -n \"$(realpath .wp-env.json)\" | md5sum | awk '{print $1}')-mysql-1\") 3306/tcp | awk -F':' '{print $2}') -e PMA_USER=root -e PMA_PASSWORD=password phpmyadmin",
-		"phpmyadmin:stop": "docker stop wp-env-phpmyadmin"
+    "phpmyadmin:start": "docker stop wp-env-phpmyadmin 2>/dev/null; docker run --name wp-env-phpmyadmin --rm -d -p 8080:80 -e PMA_HOST=host.docker.internal -e PMA_PORT=$(docker port $(docker ps -q -f name=\"$(echo -n \"$(realpath .wp-env.json)\" | md5sum | awk '{print $1}')-mysql-1\") 3306/tcp | awk -F':' '{print $2}') -e PMA_USER=root -e PMA_PASSWORD=password phpmyadmin",
+    "phpmyadmin:stop": "docker stop wp-env-phpmyadmin"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,11 @@
   "homepage": "https://github.com/preparacao-e-autossuficiencia/site-gnpa#readme",
   "description": "",
   "devDependencies": {
-    "@wordpress/env": "^10.23.0"
+    "@eslint/js": "^9.27.0",
+    "@wordpress/env": "^10.23.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "typescript-eslint": "^8.33.0"
   }
 }
