--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,4 @@
 {
 	"singleQuote": true,
-	"trailingComma": "none",
-	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"trailingComma": "none"
 }
