--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "gnpa",
   "version": "1.0.0",
+  "author": "Hakira Shymuy",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/preparacao-e-autossuficiencia/site-gnpa.git"
+  },
   "main": "index.js",
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@wordpress/env": "^10.23.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "typescript-eslint": "^8.33.0"
+  },
+  "bugs": {
+    "url": "https://github.com/preparacao-e-autossuficiencia/site-gnpa/issues"
+  },
+  "description": "",
+  "homepage": "https://github.com/preparacao-e-autossuficiencia/site-gnpa#readme",
+  "license": "ISC",
   "scripts": {
     "wp": "wp-env",
     "wp:start": "wp-env start",
     "wp:stop": "wp-env stop",
     "phpmyadmin:start": "docker stop wp-env-phpmyadmin 2>/dev/null; docker run --name wp-env-phpmyadmin --rm -d -p 8080:80 -e PMA_HOST=host.docker.internal -e PMA_PORT=$(docker port $(docker ps -q -f name=\"$(echo -n \"$(realpath .wp-env.json)\" | md5sum | awk '{print $1}')-mysql-1\") 3306/tcp | awk -F':' '{print $2}') -e PMA_USER=root -e PMA_PASSWORD=password phpmyadmin",
     "phpmyadmin:stop": "docker stop wp-env-phpmyadmin"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/preparacao-e-autossuficiencia/site-gnpa.git"
-  },
-  "author": "Hakira Shymuy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/preparacao-e-autossuficiencia/site-gnpa/issues"
-  },
-  "homepage": "https://github.com/preparacao-e-autossuficiencia/site-gnpa#readme",
-  "description": "",
-  "devDependencies": {
-    "@eslint/js": "^9.27.0",
-    "@wordpress/env": "^10.23.0",
-    "eslint": "^9.27.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.2.0",
-    "typescript-eslint": "^8.33.0"
   }
 }
