skip: fix some settings

--- a/src/blocks-src/tsconfig.json
+++ b/src/blocks-src/tsconfig.json
@@ -19,7 +19,9 @@
 		"@wordpress/hooks",
 		"@wordpress/i18n",
 		"@wordpress/plugins"
-	  ]
+	  ],
+	  "outDir": "./dist"
 	},
-	"include": ["./"]
+	"include": ["src/**/*.ts", "src/**/*.tsx"],
+	"exclude": ["dist"]
 }
