--- a/src/blocks-src/package.json
+++ b/src/blocks-src/package.json
@@ -10,10 +10,10 @@
   },
   "type": "module",
   "devDependencies": {
-    "@wordpress/components": "^29.10.0",
-    "@wordpress/scripts": "^30.17.0"
+		"@wordpress/scripts": "^30.17.0",
+		"typescript": "^5.8.3"
   },
   "dependencies": {
-    "typescript": "^5.8.3"
+		"@wordpress/components": "^29.10.0"
   }
 }
