--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.27.0",
+		"@types/bun": "^1.2.15",
 		"@wordpress/env": "^10.23.0",
+		"@wordpress/eslint-plugin": "^22.10.0",
 		"eslint": "^9.27.0",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-react": "^7.37.5",
