--- a/src/blocks-src/package.json
+++ b/src/blocks-src/package.json
@@ -10,10 +10,13 @@
   },
   "type": "module",
   "devDependencies": {
-		"@wordpress/scripts": "^30.17.0",
-		"typescript": "^5.8.3"
+    "@wordpress/scripts": "^30.17.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-		"@wordpress/components": "^29.10.0"
+    "@wordpress/block-editor": "^14.19.0",
+    "@wordpress/blocks": "^14.13.0",
+    "@wordpress/components": "^29.10.0",
+    "@wordpress/element": "^6.24.0"
   }
 }
