--- a/src/blocks-src/tsconfig.json
+++ b/src/blocks-src/tsconfig.json
@@ -5,6 +5,7 @@
 	  "lib": ["DOM", "DOM.Iterable", "ESNext"],
 	  "moduleResolution": "Node",
 	  "jsx": "react-jsx",
+	  "jsxImportSource": "@wordpress/element",
 	  "esModuleInterop": true,
 	  "allowSyntheticDefaultImports": true,
 	  "strict": true,
@@ -13,9 +14,11 @@
 	  "resolveJsonModule": true,
 	  "isolatedModules": true,
 	  "types": [
+		"@wordpress/blocks",
 		"@wordpress/block-editor",
 		"@wordpress/components",
 		"@wordpress/compose",
+		"@wordpress/element",
 		"@wordpress/hooks",
 		"@wordpress/i18n",
 		"@wordpress/plugins"
