--- a/src/blocks-src/package.json
+++ b/src/blocks-src/package.json
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/wordpress__block-editor": "^11.5.16",
     "@wordpress/scripts": "^30.17.0",
     "typescript": "^5.8.3"
   },
