--- a/.distignore
+++ b/.distignore
@@ -11,5 +11,5 @@ phpstan-bootstrap.php
 .phpunit.result.cache
 phpunit.xml.dist
 
-*.test.{js,ts}
-*.spec.{js,ts}
+*.test.{js,ts,tsx}
+*.spec.{js,ts,tsx}
