--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 		"wp": "wp-env",
 		"wp:start": "wp-env start",
 		"wp:stop": "wp-env stop",
-		"phpmyadmin:start": "docker stop wp-env-phpmyadmin 2>/dev/null; docker run --name wp-env-phpmyadmin --rm -d -p 8080:80 -e PMA_HOST=host.docker.internal -e PMA_PORT=$(docker port $(docker ps -q -f name=\"$(echo -n \"$(realpath .wp-env.json)\" | md5sum | awk '{print $1}')-mysql-1\") 3306/tcp | awk -F':' '{print $2}') -e PMA_USER=root -e PMA_PASSWORD=password phpmyadmin",
-		"phpmyadmin:stop": "docker stop wp-env-phpmyadmin",
+		"phpma:start": "docker stop wp-env-phpmyadmin 2>/dev/null; docker run --name wp-env-phpmyadmin --rm -d -p 8080:80 -e PMA_HOST=host.docker.internal -e PMA_PORT=$(docker port $(docker ps -q -f name=\"$(echo -n \"$(realpath .wp-env.json)\" | md5sum | awk '{print $1}')-mysql-1\") 3306/tcp | awk -F':' '{print $2}') -e PMA_USER=root -e PMA_PASSWORD=password phpmyadmin",
+		"phpma:stop": "docker stop wp-env-phpmyadmin",
 		"create-block": "bun cli/create-block/index.ts",
 		"blocks:dev": "bun run --filter=gnpa-blocks start",
 		"blocks:build": "bun run --filter=gnpa-blocks build"
