--- a/src/blocks-src/package.json
+++ b/src/blocks-src/package.json
@@ -23,8 +23,8 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "wp-scripts start --source-path=src --output-path=../../src/plugin-src/dist/blocks --blocks-manifest",
-		"build": "wp-scripts build --source-path=src --output-path=../../src/plugin-src/dist/blocks --blocks-manifest"
+    "start": "wp-scripts start --source-path=src --output-path=../../src/plugin-src/dist/blocks --blocks-manifest",
+    "build": "wp-scripts build --source-path=src --output-path=../../src/plugin-src/dist/blocks --blocks-manifest"
   },
   "type": "module",
   "devDependencies": {
@@ -33,9 +33,11 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@wordpress/api-fetch": "^7.26.0",
     "@wordpress/block-editor": "^14.19.0",
     "@wordpress/blocks": "^14.13.0",
     "@wordpress/components": "^29.10.0",
-    "@wordpress/element": "^6.24.0"
+    "@wordpress/element": "^6.24.0",
+    "@wordpress/url": "^4.26.0"
   }
 }
